Add procgen map

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
       </div>
     </a>
     <div id="game-container"></div>
+    <svg id="mesh"></svg>
 
     <script src="./index.js"></script>
   </body>
